ajout et edit de jobPosition ne marchent pas